cleanup old code

--- a/old/older/_posts/2013-08-28-pdr-auro.md
+++ b/old/older/_posts/2013-08-28-pdr-auro.md
@@ -1,14 +1,13 @@
 ---
 layout: post
-title: "Public Domain Retcons: Auro, Lord of Jupiter"
-date: "August 28th, 2013"
+title:  "Public Domain Retcons: Auro, Lord of Jupiter"
+date:   August 28th, 2013
 categories: pdr comics nerdery
-published: true
 ---
 
 Super Heroes are becoming our new mythology. The Avengers and Batman are far more well-circulated than, say, Aesop's Fables in popular culture. But these (awesome) creations are owned. Unlike the legends of yore, you can get sued if you try and tell a Batman story that DC doesn't like. Granted, fanfiction is a thriving community, but at the core there's a very real separation between who's allowed to officially create Wolverine content and who's not.
 
-Enter [Public Domain Superheroes](http://pdsh.wikia.com/wiki/Public_Domain_Super_Heroes "Public Domain Super Heroes Wiki"). Why not dig for inspiration, for modern myths, in the same junk drawer of golden and silver age comics that anyone can access? Why leave John Carter as the only famously public domain superhero? Why not open source comics?
+Enter [Public Domain Superheroes](http://pdsh.wikia.com/wiki/Public_Domain_Super_Heroes "Public Domain Super Heroes Wiki"). Why not dig for inspiration, for modern myths, in the same junk drawer of golden and silver age comics that anyone can access? Why leave John Carter as the only famous public domain superhero? Why not open source comics?
 
 With those questions in mind, I humbly present a proposal for a retcon and rebirth of [Auro, Lord of Jupiter](http://pdsh.wikia.com/wiki/Auro_(1) "Auro, Lord of Jupiter on the Public Domain Super Heroes Wiki").
 
